Stylesheet/emote/tag updates 2017-02-24

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -76,53 +76,27 @@ a#search_showmore { color: #fff; }
 .link .usertext .md { background-color: #fafae1; border: 1px solid #9e7b38; }
 .res-nightmode .tagline .flair { background-color: transparent !important; }
 
-/*** Spoiler Tags ***/
+/*** Rating Tags ***/
 
-.nsfw-stamp { color: #bbf189 }
+.stamp { border: 1px solid #bbf189; }
+.stamp acronym { font-size: 0; line-height: 0; }
+.stamp acronym::after, .stamp span { color: #41a22e; }
+.stamp acronym::after { font-size: 10px; line-height: 14px; content: "PG"; }
 
-.nsfw-stamp acronym {
-  display: inline-block;
-  font-size: 0px !important;
-  letter-spacing: 0px;
-  overflow: hidden;
-  vertical-align: bottom;
-  margin-bottom:-1px ;
-  content: "";
-}
-
-.nsfw-stamp acronym:after {
-  color: #41a22e !important;
-  content: "SPOILER" !important;
-  display: block;
-  font-size: x-small !important;
-  text-decoration: none;
-  margin:-14px 2px 1px
-}
-
-.marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"] {
-  font-size: 0px !important;
-  display: inline-block;
-  vertical-align: top;
-  overflow: hidden;
-  letter-spacing: -20px;
-  content: "";
-}
-
-.unmarknsfw-button a[href="#"]:before, .marknsfw-button a[href="#"]:before {
-  font-size: 9px !important;
-  display: block;
-  letter-spacing: normal;
-  content:"spoiler";
-}
-
-.unmarknsfw-button a[href="#"]:before { content:"un-spoiler"; }
+.marknsfw-button .togglebutton,
+.unmarknsfw-button .togglebutton { font-size: 0; line-height: 0; }
+.unmarknsfw-button .togglebutton::after,
+.marknsfw-button .togglebutton::after { font-size: x-small; line-height: 1.6em; content: "tag PG"; }
+.unmarknsfw-button .togglebutton::after { content:"untag PG"; }
 
 /*** Thumbnails ***/
 
 .thumbnail:empty { background-image: url(%%thumbnails%%) !important; background-size: auto; height: 50px }
-.thumbnail.self { background-position: 0 -120px !important }
-.thumbnail.nsfw { background-position: 0 0 !important; height: 70px }
-.thumbnail.default { background-position: 0 -70px !important }
+.thumbnail.self { background-position: 0 -120px }
+.thumbnail.nsfw { visibility: hidden !important }
+.thumbnail.default { background-position: 0 -70px }
+.thumbnail.spoiler { background-position: 0 0; height: 70px }
+.self .thumbnail.spoiler { height: 64px; background-position: 0 -120px }
 
 /*** Sidebar Emote Tables ***/
 
@@ -473,17 +447,14 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 /*** Flairs ***/
 
 .flair {
-  padding: 0;
-  background: none;
-  color: black;
   border: 0;
-  border-radius: 0;
-  background-image: url(%%flair-table%%);
-  display: inline-block;
+  padding: 0;
   width: 16px;
   height: 16px;
-  text-indent: -9999px;
-  line-height: 240%;
+  text-indent: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  background: url(%%flair-table%%);
 }
 
 .flair-rainbowdash { background-position: 0 0; }
@@ -607,6 +578,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 
 .flair-strudel {
   width: 32px;
+  text-indent: 40px;
   background-position: 0 0;
   background-image: url(%%fritspecial%%) !important;
 }
