--- a/source-css/floofingandsqueaking.css
+++ b/source-css/floofingandsqueaking.css
@@ -1933,14 +1933,46 @@ text-align: justify; }
 #RESSettingsButton {top: 0!important; }
 
 
-/* Emote Sheet JrBpc */ 
-a[href|='/HaiChangeling']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-5px -5px}
-a[href|='/HaiCopper']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-265px -5px}
-a[href|='/HaiFlare']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-525px -5px}
-a[href|='/HaiHam']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-5px -265px}
-a[href|='/HaiInspira']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-265px -265px}
-a[href|='/HaiRD']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-525px -265px}
-a[href|='/HaiSoothe']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-5px -525px}
-a[href|='/HaiTS']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-265px -525px}
-a[href|='/HaiVital']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-525px -525px}
-a[href|='/HaiWaves']{background-image:url(%%JrBpc%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:250px;height:250px;background-position:-785px -5px}
+/* Emote Sheet sicBG */ 
+a[href|='/blushyvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:0 0}
+a[href|='/blushywaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-100px 0}
+a[href|='/cowersvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:-200px 0}
+a[href|='/cowerswaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:-400px 0}
+a[href|='/embarrassedinspira']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:0 -100px}
+a[href|='/embarrassedsecret']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-75px -100px}
+a[href|='/embarrassedsoothe']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-150px -100px}
+a[href|='/embarrassedvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-225px -100px}
+a[href|='/embarrassedwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-325px -100px}
+a[href|='/embarrasssedcopper']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-425px -100px}
+a[href|='/embarrasssedham']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-500px -100px}
+a[href|='/glompvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:0 -175px}
+a[href|='/glompwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:-425px -175px}
+a[href|='/haichangeling']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-575px -100px}
+a[href|='/haicopper']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:0 -275px}
+a[href|='/haiflare']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-75px -275px}
+a[href|='/haiham']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-150px -275px}
+a[href|='/haiinspira']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-225px -275px}
+a[href|='/hairainbow']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-300px -275px}
+a[href|='/haisecret']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-375px -275px}
+a[href|='/haisoothe']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-450px -275px}
+a[href|='/haitek']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:-525px -275px}
+a[href|='/haitwilight']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:75px;background-position:0 -350px}
+a[href|='/haivital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-75px -350px}
+a[href|='/haiwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-175px -350px}
+a[href|='/hidingvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-275px -350px}
+a[href|='/hidingwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-375px -350px}
+a[href|='/sadvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-475px -350px}
+a[href|='/sadwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:0 -450px}
+a[href|='/scrunchyvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-100px -450px}
+a[href|='/scrunchywaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-200px -450px}
+a[href|='/sittingcopper']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:150px;background-position:-575px -350px}
+a[href|='/sittingham']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:150px;background-position:-300px -500px}
+a[href|='/sittinginspira']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:150px;background-position:-375px -500px}
+a[href|='/sittingsecret']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:150px;background-position:-450px -500px}
+a[href|='/sittingsoothe']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:75px;height:150px;background-position:-525px -500px}
+a[href|='/sittingvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:200px;background-position:-650px 0}
+a[href|='/sittingwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:200px;background-position:-650px -200px}
+a[href|='/sleepingvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:0 -650px}
+a[href|='/sleepingwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:200px;height:100px;background-position:-200px -650px}
+a[href|='/stuckvital']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-650px -400px}
+a[href|='/stuckwaves']{background-image:url(%%sicBG%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:100px;height:100px;background-position:-600px -500px}
