--- a/source-css/octavia.css
+++ b/source-css/octavia.css
@@ -245,16 +245,14 @@ a[href="/s"]:hover::after {
 .stylesheet-customize-container textarea { height: 600px; }
 
 .flair {
-  padding:0;
-  background:url(%%flair-table%%);
-  color:black;
-  border:0;
-  border-radius:0;
-  display:inline-block;
-  width:16px;
-  height:16px;
-  text-indent:-9999px;
-  line-height:240%;
+  border: 0;
+  padding: 0;
+  width: 16px;
+  height: 16px;
+  text-indent: 20px;
+  overflow: hidden;
+  white-space: nowrap;
+  background: url(%%flair-table%%);
 }
 
 .res-nightmode .tagline .flair { background-color: transparent !important }
