--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -538,6 +538,28 @@ a[href|="/crazytavi"] {
 } 
 
 
+a[href|="/abwatford"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 122px;
+ height: 150px;
+ background-image: url(%%spritesheet16%%);
+ background-position: -0px -600px; 
+} 
+
+
+a[href|="/mightyshrimps"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 114px;
+ height: 150px;
+ background-image: url(%%spritesheet16%%);
+ background-position: -0px -450px; 
+} 
+
+
 a[href|="/spoonderland"] {  
  display: block;
  clear: none;
