--- a/source-css/discord.css
+++ b/source-css/discord.css
@@ -27,148 +27,9 @@ div.titlebox .users-online span.number:after {
     }
 
 /*Emotes*/
-a[href|="/discjustsayin"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -0px -0px;
-    }
-a[href|="/discimply"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -70px -0px;
-    }
-a[href|="/discsmile"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -140px -0px;
-    }
-a[href|="/discreally"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -210px -0px;
-    }
-a[href|="/discponder"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -0px -71px;
-    }
-a[href|="/discfear"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -70px -71px;
-    }
-a[href|="/discthatsnice"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -140px -71px;
-    }
-a[href|="/discsmug"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -210px -71px;
-    }
-a[href|="/discsquint"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 68px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -0px -141px;
-    }
-a[href|="/discwtf"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 68px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -70px -141px;
-    }
-a[href|="/discwhat"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 68px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -140px -141px;
-    }
-a[href|="/discponysmile"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 68px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -210px -141px;
-    }
-a[href|="/discponyreally"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -0px -211px;
-    }
-a[href|="/discponywhat"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -70px -211px;
-    }
-a[href|="/discponymad"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -140px -211px;
-    }
-a[href|="/discponyunsure"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 70px;
-    height: 69px;
-    background-image: url(%%sprites%%) !important;
-    background-position: -210px -211px;
-    }
+
+/* Emote Sheet sprites */ a[href|='/discfear']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 0}a[href|='/discimply']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px 0}a[href|='/discjustsayin']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px 0}a[href|='/discponder']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px 0}a[href|='/discponymad']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -70px}a[href|='/discponyreally']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -70px}a[href|='/discponysmile']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -70px}a[href|='/discponyunsure']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -70px}a[href|='/discponywhat']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -140px}a[href|='/discreally']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -140px}a[href|='/discsmile']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -140px}a[href|='/discsmug']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -140px}a[href|='/discsquint']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -210px}a[href|='/discthatsnice']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -210px}a[href|='/discwhat']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -210px}a[href|='/discwtf']{background-image:url(%%sprites%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -210px}
+
 /* Emote Sheet sprites2 */ a[href|='/discannoyed']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 0}a[href|='/discawesome']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px 0}a[href|='/discbeam']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px 0}a[href|='/disccute']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px 0}a[href|='/discevil']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -70px}a[href|='/discfrustrated']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -70px}a[href|='/discfurious']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -70px}a[href|='/discgeneral']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -70px}a[href|='/discglasses']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -140px}a[href|='/disckisses']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -140px}a[href|='/disclestia']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -140px}a[href|='/discofficer']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -140px}a[href|='/discponysad']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -210px}a[href|='/discponyscowl']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -210px}a[href|='/discponyscrunch']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -210px}a[href|='/discrage']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -210px}a[href|='/discshock']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px 0}a[href|='/discsinister']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -70px}a[href|='/discsmirk']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -140px}a[href|='/discstare']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -210px}a[href|='/discswag']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -280px}a[href|='/disctea']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -280px}a[href|='/discwhyyouarewrong']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -280px}a[href|='/discyousee']{background-image:url(%%sprites2%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -280px}
+
+/* Emote Sheet sprites3 */ a[href|='/discafraid']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 0}a[href|='/discapprove']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px 0}a[href|='/discbroken']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px 0}a[href|='/disceating']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px 0}a[href|='/discentertained']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px 0}a[href|='/discexcited']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -70px}a[href|='/discfrown']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -70px}a[href|='/discguard']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -70px}a[href|='/discidea']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -70px}a[href|='/disciwonder']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -70px}a[href|='/discmad']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -140px}a[href|='/discmadscientist']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -140px}a[href|='/discmaniacal']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -140px}a[href|='/discohno']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -140px}a[href|='/discoops']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -140px}a[href|='/discponycheer']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -210px}a[href|='/discponyohheythere']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -210px}a[href|='/discponypleased']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -210px}a[href|='/discregret']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -210px}a[href|='/discsad']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -210px}a[href|='/discsheddingatearofjoy']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:0 -280px}a[href|='/disccheer']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-70px -280px}a[href|='/disctwi']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-140px -280px}a[href|='/discupset']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-210px -280px}a[href|='/discwhatsthematter']{background-image:url(%%sprites3%%);background-repeat:no-repeat;clear:none;float:left;display:block;width:70px;height:70px;background-position:-280px -280px}
