--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -180,9 +180,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Eternal Ploungers"}
+div.titlebox .subscribers span.number:after {content:" Bumblebutts"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Even in CURRENT YEAR" }
+div.titlebox p.users-online span.number:after { content: " Bumbling about" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -238,14 +238,14 @@ div.titlebox p.users-online span.word { display: none }
 {
     display:inline-block;
     float:right;
-    background:url(%%bmotes%%);
+    background:url(%%fmotes%%);
     width:70px;
     height:70px;
     margin-top:-45px;
     margin-left:5px;
     margin-bottom:0px;
     margin-right:-45px;
-    background-position: -000% -200%; /*To select emote table position. Increments of -100%.*/
+    background-position: -300% -000%; /*To select emote table position. Increments of -100%.*/
     transform:scaleX(1); /*To reverse the hat. '1' is normal, '-1' is reversed.*/
 }
 
@@ -264,16 +264,17 @@ div.titlebox p.users-online span.word { display: none }
 
 }
 .sidecontentbox a.helplink ~ div.title:hover::after {
-    animation: modsaresupercool 3.5s steps(1, end) infinite;
+    animation: modsaresupercool 4.0s steps(1, end) infinite;
 }
 
 @keyframes modsaresupercool  {
-    14% {background-position: -300% -800%;}
-    28% {background-position: -300% -2400%;}
-    42% {background-position: -100% -200%;}
-    57% {background-position: -300% -1900%;}
-    71% {background-position: -200% -2400%;}
-    85% {background-position: -100% -2100%}
+    12.5% {background-position: -300% -800%}
+    25% {background-position: -300% -2400%}
+    37.5% {background-position: -100% -200%}
+    50% {background-position: -300% -1900%}
+    62.5% {background-position: -200% -2400%}
+    75% {background-position: -100% -2100%}
+    87.5% {background-position: -200% -300%}
 }
 
 /*Footer code*/
@@ -283,66 +284,18 @@ div.titlebox p.users-online span.word { display: none }
  padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:500px;
+ height:600px;
  width:100%;
- background-image:url(%%hfooter%%);
+ background-image:url(%%footer%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: center bottom;
 }
 
-
-/* Thanks nano! ...but if you're (not nano, but you, yes you) reading this, you're still doing it wrong. Learn from the past bucko. */
-/*
-.footer-parent {
-  position: relative;
-  width: 100%;
-  height: 660px;
-  margin-bottom: -25px;
-}
-
-.footer-parent::before, .footer-parent::after {
-  content: "";
-  position: absolute;
-  width: 431px;
-  height: 400px;
-  bottom: 0;
-  background-position: 0 0;
-  background-repeat: no-repeat;
-}
-
-.footer-parent::before {
-  left: calc(50% - 431px);
-  background-image: url(%%footer-left%%);
-}
-
-.footer-parent::after {
-  right: calc(50% - 431px);
-  background-image: url(%%footer-right%%);
-}
-
-.footer-parent:hover::before, .footer-parent:hover::after {
-  animation: footer 30.65s infinite;
-}
-
-@keyframes footer {
-  0%, 100% { background-position: 0; animation-timing-function: steps(1) }
-  97.879%, 99.837% { background-position: -431px; animation-timing-function: steps(1) }
-  98.042%, 99.674% { background-position: -862px; animation-timing-function: steps(1) }
-  98.206%, 99.511% { background-position: -1293px; animation-timing-function: steps(1) }
-  98.369% { background-position: -1724px; animation-timing-function: steps(1) }
-  98.532% { background-position: -2155px; animation-timing-function: steps(1) }
-  98.695% { background-position: -2586px; animation-timing-function: steps(1) }
-  98.858% { background-position: -3017px; animation-timing-function: steps(1) }
-  99.021% { background-position: -3448px; animation-timing-function: steps(1) }
-  99.184% { background-position: -3879px; animation-timing-function: steps(1) }
-  99.347% { background-position: -4310px; animation-timing-function: steps(1) }
-}
-*/
 /*Sidebar Filly Start*/
 
 /*Random based on first link on page*/
-div.thing.link:first-child:after {
+div.thing.link:first-child:not(.promoted)::after {
  position: fixed;
  top: 240px;
  right: 10px;
@@ -526,13 +479,13 @@ a[href|="/ripferrbearand20andal"] {
 /*Emote positioning Code*/
 /* 0 0 is skipped, unneeded */
 
-a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/f01"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/rf01"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rapathia"],a[href|="/rapathia"],a[href|="/g01"],a[href|="/discentiajudge"],a[href|="/rg01"],a[href|="/rdiscentiajudge"],.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
+a[href|="/twipride"],a[href|="/a01"],a[href|="/rtwipride"],a[href|="/ra01"],a[href|="/ajcower"],a[href|="/b01"],a[href|="/rajcower"],a[href|="/rb01"],a[href|="/twismug"],a[href|="/c01"],a[href|="/rtwismug"],a[href|="/rc01"],a[href|="/lyra"],a[href|="/l00"],a[href|="/e01"],a[href|="/rlyra"],a[href|="/rl00"],a[href|="/re01"],a[href|="/f01"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/rf01"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rapathia"],a[href|="/rapathia"],a[href|="/g01"],a[href|="/discentiajudge"],a[href|="/rg01"],a[href|="/rdiscentiajudge"],a[href|="/pl01"],a[href|="/rpl01"],a[href|="/karmasalute"],a[href|="/rkarmasalute"],.side .md table tr:nth-of-type(3) td:nth-of-type(2):after
 {background-position:0 -100%}
 
-a[href|="/lunateehee"],a[href|="/a02"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/f02"],a[href|="/sombra"],a[href|="/rf02"],a[href|="/rsombra"],a[href|="/rflimflam"],a[href|="/flam"],a[href|="/rflam"],a[href|="/rf24"],a[href|="/g02"],a[href|="/twisnide"],a[href|="/rg02"],a[href|="/rtwisnide"],.side .md table tr:nth-of-type(5) td:nth-of-type(2):after
+a[href|="/lunateehee"],a[href|="/a02"],a[href|="/rlunateehee"],a[href|="/ra02"],a[href|="/fluttersrs"],a[href|="/b02"],a[href|="/rfluttersrs"],a[href|="/rb02"],a[href|="/ohhi"],a[href|="/c02"],a[href|="/rohhi"],a[href|="/rc02"],a[href|="/cutealoo"],a[href|="/e02"],a[href|="/rcutealoo"],a[href|="/re02"],a[href|="/f02"],a[href|="/sombra"],a[href|="/rf02"],a[href|="/rsombra"],a[href|="/rflimflam"],a[href|="/flam"],a[href|="/rflam"],a[href|="/rf24"],a[href|="/g02"],a[href|="/twisnide"],a[href|="/rg02"],a[href|="/rtwisnide"],a[href|="/pl02"],a[href|="/rpl02"],a[href|="/ohnoes"],a[href|="/rohnoes"],.side .md table tr:nth-of-type(5) td:nth-of-type(2):after
 {background-position:0 -200%}
 
-a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/a03"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ra03"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/flutterblush"],a[href|="/c03"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/wahaha"],a[href|="/e03"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/f03"],a[href|="/sbshocked"],a[href|="/rf03"],a[href|="/rsbshocked"],a[href|="/g03"],a[href|="/pinkie"],a[href|="/pp"],a[href|="/rg03"],a[href|="/rpinkie"],a[href|="/rpp"],.side .md table tr:nth-of-type(7) td:nth-of-type(2):after
+a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/a03"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ra03"],a[href|="/ppshrug"],a[href|="/b03"],a[href|="/rppshrug"],a[href|="/rb03"],a[href|="/flutterblush"],a[href|="/c03"],a[href|="/rflutterblush"],a[href|="/rc03"],a[href|="/wahaha"],a[href|="/e03"],a[href|="/rwahaha"],a[href|="/re03"],a[href|="/f03"],a[href|="/sbshocked"],a[href|="/rf03"],a[href|="/rsbshocked"],a[href|="/g03"],a[href|="/pinkie"],a[href|="/pp"],a[href|="/rg03"],a[href|="/rpinkie"],a[href|="/rpp"],a[href|="/pl03"],a[href|="/rpl03"],a[href|="/sadbee"],a[href|="/rsadbee"],.side .md table tr:nth-of-type(7) td:nth-of-type(2):after
 {background-position:0 -300%}
 
 a[href|="/raritydaww"],a[href|="/a04"],a[href|="/rraritydaww"],a[href|="/raritydaw"],a[href|="/rraritydaw"],a[href|="/ra04"],a[href|="/fluttershh"],a[href|="/b04"],a[href|="/rfluttershh"],a[href|="/rb04"],a[href|="/ajfrown"],a[href|="/c04"],a[href|="/rajfrown"],a[href|="/rc04"],a[href|="/huhhuh"],a[href|="/e04"],a[href|="/rhuhhuh"],a[href|="/re04"],a[href|="/f04"],a[href|="/guard"],a[href|="/rf04"],a[href|="/rguard"],a[href|="/cococold"],a[href|="/g04"],a[href|="/rcococold"],a[href|="/rg04"],.side .md table tr:nth-of-type(9) td:nth-of-type(2):after
@@ -553,10 +506,10 @@ a[href|="/twiright"],a[href|="/satistwied"],a[href|="/a08"],a[href|="/rtwiright"
 a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/ra09"],a[href|="/rarityjudge"],a[href|="/b09"],a[href|="/rrarityjudge"],a[href|="/rb09"],a[href|="/allmybits"],a[href|="/c09"],a[href|="/rallmybits"],a[href|="/rc09"],a[href|="/gilda"],a[href|="/e09"],a[href|="/rgilda"],a[href|="/re09"],a[href|="/f09"], a[href|="/flutterkay"], a[href|="/flutter:I"], a[href|="/pokershy"],a[href|="/rf09"], a[href|="/rflutterkay"], a[href|="/rflutter:I"], a[href|="/rpokershy"],.side .md table tr:nth-of-type(19) td:nth-of-type(2):after
 {background-position:0 -900%}
 
-a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/f10"], a[href|="/starlightrage"],a[href|="/rf10"], a[href|="/rstarlightrage"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
+a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/rrdhuh"],a[href|="/re10"],a[href|="/f10"], a[href|="/starlightrage"],a[href|="/rf10"], a[href|="/rstarlightrage"],a[href|="/pl10"],a[href|="/rpl10"],a[href|="/twidur"],a[href|="/twidurr"],a[href|="/rtwidur"],a[href|="/rtwidurr"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position:-100% 0}
 
-a[href|="/celestiamad"],a[href|="/a11"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/twismile"],a[href|="/c11"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"],a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"],.side .md table tr:nth-of-type(3) td:nth-of-type(3):after
+a[href|="/celestiamad"],a[href|="/a11"],a[href|="/rcelestiamad"],a[href|="/ra11"],a[href|="/ajsly"],a[href|="/b11"],a[href|="/rajsly"],a[href|="/rb11"],a[href|="/twismile"],a[href|="/c11"],a[href|="/rtwismile"],a[href|="/rc11"],a[href|="/bonbon"],a[href|="/e11"],a[href|="/rbonbon"],a[href|="/re11"],a[href|="/f11"], a[href|="/bulkbiceps"], a[href|="/yeah"],a[href|="/rf11"], a[href|="/rbulkbiceps"], a[href|="/ryeah"],a[href|="/pl11"],a[href|="/rpl11"],a[href|="/dishappy"],a[href|="/rdishappy"],.side .md table tr:nth-of-type(3) td:nth-of-type(3):after
 {background-position:-100% -100%}
 
 a[href|="/lunawait"],a[href|="/a12"],a[href|="/rlunawait"],a[href|="/ra12"],a[href|="/raritydress"],a[href|="/b12"],a[href|="/rraritydress"],a[href|="/rb12"],a[href|="/party"],a[href|="/c12"],a[href|="/rparty"],a[href|="/rc12"],a[href|="/happyluna"],a[href|="/lunahappy"],a[href|="/e12"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/re12"],a[href|="/f12"], a[href|="/scootaeww"],a[href|="/rf12"], a[href|="/rscootaeww"],.side .md table tr:nth-of-type(5) td:nth-of-type(3):after
@@ -583,10 +536,10 @@ a[href|="/celestiawut"],a[href|="/wutlestia"],a[href|="/a18"],a[href|="/rcelesti
 a[href|="/chrysalis"],a[href|="/queenchrysalis"],a[href|="/changelingqueen"],a[href|="/a19"],a[href|="/rchrysalis"],a[href|="/rqueenchrysalis"],a[href|="/rchangelingqueen"],a[href|="/ra19"],a[href|="/rarityprimp"],a[href|="/b19"],a[href|="/rrarityprimp"],a[href|="/rb19"],a[href|="/zecora"],a[href|="/c19"],a[href|="/rzecora"],a[href|="/rc19"],a[href|="/discentia"],a[href|="/discentiastare"],a[href|="/disstare"],a[href|="/e19"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/re19"],a[href|="/f19"], a[href|="/notangry"],a[href|="/rf19"], a[href|="/rnotangry"],.side .md table tr:nth-of-type(19) td:nth-of-type(3):after
 {background-position:-100% -900%}
 
-a[href|="/flutterjerk"],a[href|="/a20"],a[href|="/rflutterjerk"],a[href|="/ra20"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rdannoyed"],a[href|="/c20"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/snails"],a[href|="/e20"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/f20"], a[href|="/ajdoubt"],a[href|="/rf20"], a[href|="/rajdoubt"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
+a[href|="/flutterjerk"],a[href|="/a20"],a[href|="/rflutterjerk"],a[href|="/ra20"],a[href|="/rarityyell"],a[href|="/b20"],a[href|="/rrarityyell"],a[href|="/rb20"],a[href|="/rdannoyed"],a[href|="/c20"],a[href|="/rrdannoyed"],a[href|="/rc20"],a[href|="/snails"],a[href|="/e20"],a[href|="/rsnails"],a[href|="/re20"],a[href|="/f20"], a[href|="/ajdoubt"],a[href|="/rf20"], a[href|="/rajdoubt"],a[href|="/pl20"],a[href|="/rpl20"],a[href|="/amzingmagic"],a[href|="/amazingmagic"],a[href|="/ramzingmagic"],a[href|="/ramazingmagic"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
 {background-position:-200% 0}
 
-a[href|="/twicrazy"],a[href|="/a21"],a[href|="/rtwicrazy"],a[href|="/ra21"],a[href|="/eeyup"],a[href|="/b21"],a[href|="/reeyup"],a[href|="/bigmac"],a[href|="/rbigmac"],a[href|="/rb21"],a[href|="/twistare"],a[href|="/c21"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/spitfire"],a[href|="/e21"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/f21"], a[href|="/spikewhoa"],a[href|="/spikewoah"], a[href|="/justaprankbro"],a[href|="/rf21"], a[href|="/rspikewhoa"],a[href|="/rspikewoah"], a[href|="/rjustaprankbro"],.side .md table tr:nth-of-type(3) td:nth-of-type(4):after
+a[href|="/twicrazy"],a[href|="/a21"],a[href|="/rtwicrazy"],a[href|="/ra21"],a[href|="/eeyup"],a[href|="/b21"],a[href|="/reeyup"],a[href|="/bigmac"],a[href|="/rbigmac"],a[href|="/rb21"],a[href|="/twistare"],a[href|="/c21"],a[href|="/rtwistare"],a[href|="/rc21"],a[href|="/spitfire"],a[href|="/e21"],a[href|="/rspitfire"],a[href|="/re21"],a[href|="/f21"], a[href|="/spikewhoa"],a[href|="/spikewoah"], a[href|="/justaprankbro"],a[href|="/rf21"], a[href|="/rspikewhoa"],a[href|="/rspikewoah"], a[href|="/rjustaprankbro"],a[href|="/pl21"],a[href|="/rpl21"],a[href|="/karmasalute"],a[href|="/rkarmasalute"],.side .md table tr:nth-of-type(3) td:nth-of-type(4):after
 {background-position:-200% -100%}
 
 a[href|="/paperbagderpy"],a[href|="/paperbagmuffins"],a[href|="/paperbagwizard"],a[href|="/derpwizard"],a[href|="/a22"],a[href|="/rpaperbagderpy"],a[href|="/rpaperbagmuffins"],a[href|="/rpaperbagwizard"],a[href|="/rderpwizard"],a[href|="/ra22"],a[href|="/takealetter"],a[href|="/b22"],a[href|="/rtakealetter"],a[href|="/rb22"],a[href|="/hahaha"],a[href|="/c22"],a[href|="/rhahaha"],a[href|="/rc22"],a[href|="/sotrue"],a[href|="/e22"],a[href|="/rsotrue"],a[href|="/re22"],a[href|="/f22"], a[href|="/wasntme"],a[href|="/seaswirl"],a[href|="/seafoam"],a[href|="/rf22"], a[href|="/rwasntme"],a[href|="/rseaswirl"],a[href|="/rseafoam"],.side .md table tr:nth-of-type(5) td:nth-of-type(4):after
@@ -1105,8 +1058,8 @@ padding: 0
 .flair-cmcdarkle:hover {background-position: -300% -2400%} /*For Darkle; Sunset Shimmer Hover*/
 .flair-cmclunar {background-position: -300% -100%}
 .flair-cmclunar:hover {background-position: -300% -800%} /*For LunarWolves; NMM Hover*/
-.flair-excmcal {background-position: -400% -100%}
-.flair-excmcal:hover {background-position: -200% -300%} /*For Frenchie; Tavi Hover*/
+.flair-cmcal {background-position: -300% -100%}
+.flair-cmcal:hover {background-position: -200% -300%} /*For Frenchie; Tavi Hover*/
 .flair-cmcsh {background-position: -300% -100%}
 .flair-cmcsh:hover {background-position: -200% -2400%} /*For Shercock_Holmes; Starlight Glimmer Hover*/
 .flair-cmcjib {background-position: -300% -100%}
@@ -1165,36 +1118,30 @@ max-width: 50em;
 /*Thumbnail Styling*/
 .thumbnail:empty{background-image:url(%%thumbnails%%)!important}
 .thumbnail.self{background-position:0px -120px!important;height:50px;}
-.thumbnail.nsfw{background-position:0px 0px!important;height:70px;}
+.thumbnail.spoiler, .thumbnail.nsfw{background-position:0px 0px!important;height:70px;}
 .thumbnail.default{ background-position:0px -70px!important;height:50px;}
 
 /*Spoiler text blackout*/
 body a[href="/spoiler"]{background:black!important;color:black!important}
 body a[href="/spoiler"]:hover{color:white!important}
 
-/*Old NSFW Spoiler Marking*/
-.marknsfw-button a[href="#"], .unmarknsfw-button a[href="#"]
-{
- font-size:0px!important;
- display:inline-block;
- vertical-align:top;
- overflow:hidden;
- letter-spacing:-20px;
- content:""
+/* Spoiler stamp styling */
+.spoiler-stamp {border-color: #5F99CF; color: #5F99CF}
+
+/* Hide NSFW button, if you're not a mod */
+body:not(.moderator) .marknsfw-button a[href="#"], body:not(.moderator) .unmarknsfw-button a[href="#"] {
+    display:none;
+}
+/* kinda ugly way to stop the extra large gap from the missing button */
+body:not(.moderator) .spoiler-button a[href="#"], body:not(.moderator) .unspoiler-button a[href="#"] {
+    margin-left: -8px;
 }
 
-.unmarknsfw-button a[href="#"]:before, .marknsfw-button a[href="#"]:before
-{
- font-size:10px!important;
- display:block;
- letter-spacing:normal;
- content:"spoiler"
-}
-.unmarknsfw-button a[href="#"]:before{content:"un-spoiler";}
+/* Legacy NSFW -> Spoiler CSS */
+.nsfw-stamp {border:#5F99CF 1px solid!important}
 
 .nsfw-stamp acronym
 {
- border:#5F99CF 1px solid!important;
  display:inline-block;
  font-size:0px!important;
  letter-spacing:0px;
@@ -1214,14 +1161,25 @@ body a[href="/spoiler"]:hover{color:white!important}
  margin: -15px 2px 1px;
 }
 
-.stamp
-{
- border: none!important;
+/* Legacy NSFW -> spoiler on expandos */
+.expando-gate--nsfw button.expando-gate__show-once {
+    font-size: 0;
+    content: "";
+}
+
+.expando-gate--nsfw button.expando-gate__show-once::before {
+    font-size: 13.33333px;
+    content: "Click to see spoiler";
+    text-shadow: black 0 0 3px;
+}
+
+.expando-gate--nsfw p.expando-gate__text {
+    display: none;
 }
 
 div.over18 .entry .buttons .first{padding-left: 0px}
 
-/* The gate on the new expandos too */
+/* Legacy NSFW -> spoiler on expandos */
 .expando-gate--nsfw button.expando-gate__show-once {
     font-size: 0;
     content: "";
