--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -64,3 +64,5 @@ a[href|="/sillywater"] {background:url(%%sillywater%%) no-repeat;width:150px;hei
 a[href|="/sonatapopcorn"] {background:url(%%sonatapopcorn%%) no-repeat;width:108px;height:150px;display:block;float:left;}
 a[href|="/ponkblep"] {background:url(%%ponkblep%%) no-repeat;width:100px;height:96px;display:block;float:left;}
 a[href|="/imready"] {background:url(%%imready%%) no-repeat;width:83px;height:100px;display:block;float:left;}
+a[href|="/vsheartbeatheadbop"] {background:url(%%vsheartbeatheadbop%%) no-repeat;width:128px;height:150px;display:block;float:left;}
+a[href|="/blep"] {background:url(%%blep%%) no-repeat;width:129px;height:150px;display:block;float:left;}
